<resources>
    <string name="app_name">Katrip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_poyezd">Poyezd</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_avia_chpta_izlash">AviaChptaIzlash</string>
    <string name="cameraga_olish">Iltimos sizning yuzinggiz belgilangan maydondan chiqmasligi va ko\'zlaringgiz yumulmagan bo\'lishini taninlang.Agar ko\'zoynakinggiz bo\'lsa yechib oling.</string>
    <string name="profil_shaxsiy_text">Ilovaning barcha imkoniyatlaridan foydalanish uchun iltimos profilingizni tasdiqlash jarayonidan o\'ting.</string>
    <string name="profil_biznes_text">Shaxsiy biznes yoki tashkilotinggizni ilovaga qo\'shish orqali xizmatlarimizdan foydalanishingiz va hisob raqamdan to\'lov qilishingiz mumkin. Batafsil ma\'lumot uchun qo\'llab-quvvatlash markaziga murojaat eting!\n\nEslatma:Biznes profil qo\'shishdan oldin avvalo,shaxsiy profilni tasdiqlashingiz shart!</string>
    <string name="eslatma_biznes">Eslatma:Biznes profilga qo\'shgan\nma\'lumotlaringiz tasdiqlangandan so\'ngina\nilovaning maxsus imkoniyatlaridan\nfoydalanishingiz mumkin!</string>
    <string name="til">til</string>
    <string-array name="on_bording_title">
        <item>Maxsus imkoniyatlar</item>
        <item>Tezkor band qilish</item>
        <item>Qulay transportlardan foydalanish</item>
        <item>Специальные удобства</item>
        <item>Быстрое бронирование</item>
        <item>Удобный транспорт</item>
        <item>Special facilities</item>
        <item>Quick booking</item>
        <item>Convenient transportation</item>
    </string-array>
    <string-array name="on_bording_subtitle">
        <item>Shaharlardagi sayohatga oid joylarga online sayohat\nqilish,audio git, 360 formatda tomosha qilish va\nboshqa ko\'plab imkoniyatlar</item>
        <item>A nuqtadan B nuqtaga oson sayohat qilishingiz uchun\nsamaliyot,poyezd,avtobus va taksi yo\'nalishlarini\nko\'rtish va chipta olish imkoniga ega bo\'ling!</item>
        <item>Mehmonxona,hostel,turar-joy,dacha va turli xil tur\nsayohat to\'pamlarini tezkor va qulay usulda band\n qilish imkoniga ega bo\'lasiz</item>
        <item>Онлайн-путешествия по местам для путешествий по городам, аудиогид, обзор на 360 градусов и многие другие специальные функции.</item>
        <item>Вы можете быстро и легко забронировать гостиницу, хостел, ночлег, дачу и различные турпакеты.</item>
        <item>Имейте возможность показать и получить билеты на самолет, поезд, автобус и маршрут такси для удобного путешествия из точки А в точку Б!</item>
        <item>Online travel to city travel destinations, audio guide, 360-degree viewing and many other special features</item>
        <item>You will be able to book hotel, hostel, accommodation, resorts and various tour packages quickly and conveniently.</item>
        <item>Have the opportunity to show and get tickets for plane, train, bus and taxi routes for easy travel from point A to point B!</item>
    </string-array>
    <string-array name="on_bording_tugmalar">
        <item>Davom etish</item>
        <item>Продолжать</item>
        <item>Continue</item>
        <item>Boshlash</item>
        <item>Начинать</item>
        <item>Start</item>
    </string-array>
    <string-array name="Oylar">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="Yillar">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
    </string-array>
    <string name="davom_etish_btn_text">Davom etish</string>
    <string name="maxsus_imkoniyatlar">Maxsus imkoniyatlar</string>
    <string name="tezkor_band_qilish">Tezkor band qilish</string>
    <string name="onboring_text_1">Shaharlardagi sayohatga oid joylarga online sayohat\nqilish,audio git, 360 formatda tomosha qilish va\nboshqa ko\'plab imkoniyatlar</string>
    <string name="onbording_text_2">Mehmonxona,hostel,turar-joy,dacha va turli xil tur\nsayohat to\'pamlarini tezkor va qulay usulda band\n qilish imkoniga ega bo\'lasiz</string>
    <string name="onbording_text_3">A nuqtadan B nuqtaga oson sayohat qilishingiz uchun\nsamaliyot,poyezd,avtobus va taksi yo\'nalishlarini\nko\'rtish va chipta olish imkoniga ega bo\'ling!</string>
    <string name="boshlash">Boshlash</string>
    <string name="qulay_transportlardan_foydalanish">Qulay transportlardan foydalanish</string>
    <string name="biz_bilan_tez_va_oson_sayohat_qiling">Biz bilan tez va oson sayohat qiling!</string>
    <string name="xush_kelibsiz">Xush kelibsiz!</string>
    <string name="telefon_raqaminggizni_kiriting">Telefon raqaminggizni kiriting</string>
    <string name="sms_kodni_kiriting">SMS kodni kiriting</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="sms_kelmadimi">Sms kelmadimi?</string>
    <string name="chiqish">Chiqish</string>
    <string name="eng_yaqin">Eng yaqin</string>
    <string name="skaner_ar">Skaner (AR)</string>
    <string name="a_b">A-B</string>
    <string name="aviachipta">Aviachipta</string>
    <string name="poyezd">Poyezd</string>
    <string name="turar_joy">Turar-joy</string>
    <string name="avtobus">Avtobus</string>
    <string name="taksi">Taksi</string>
    <string name="turpaket">Turpaket</string>
    <string name="chegirmalar">Chegirmalar</string>
    <string name="takliflar_va_layfhaklar">Takliflar va layfhaklar</string>
    <string name="mashhur_shaharlarga_sayohat">Mashhur shaharlarga sayohat</string>
    <string name="ko_proq">Ko\'proq</string>
    <string name="a_b_izlash">A-B izlash</string>
    <string name="qayerdan">Qayerdan</string>
    <string name="qayerga">Qayerga</string>
    <string name="qachon">Qachon</string>
    <string name="holat">Holat</string>
    <string name="izlash">Izlash</string>
    <string name="qachongacha">Qachongacha</string>
    <string name="falo_chiptalar">Falo chiptalar</string>
    <string name="no_falo_chiptalar">No falo chiptalar</string>
    <string name="filtrlash">Filtrlash</string>
    <string name="qidirish">Qidirish</string>
    <string name="chiptalarim">Chiptalarim</string>
    <string name="temir_yo_l">Temir yo`l</string>
    <string name="saqlanganlar">Saqlanganlar</string>
    <string name="saqlanganlar_haqida">Saqlanganlar haqida</string>
    <string name="tangalar">Tangalar</string>
    <string name="tarixi">Tarixi</string>
    <string name="transport">Transport</string>
    <string name="buyurtmalar">Buyurtmalar</string>
    <string name="kategoriya">Kategoriya</string>
    <string name="qr_kodni_skanerlash">QR-kodni skanerlash</string>
    <string name="yanggi_qurilmaga_kirsh_uchun_nqr_kodni_skanerlang">Yanggi qurilmaga kirsh uchun \nQR-kodni skanerlang</string>
    <string name="qr_kod_haqida">QR kod haqida</string>
    <string name="eng_ko_p_izlanganlar">Eng ko\'p izlanganlar</string>
    <string name="nimadir_izlash">Nimadir izlash</string>
    <string name="bog_lanish">Bog\'lanish</string>
    <string name="ko_p_beriladigan_savollar">Ko\'p beriladigan savollar</string>
    <string name="oferta">Oferta</string>
    <string name="biznes_profil_qo_shish">Biznes profil qo\'shish</string>
    <string name="tashkilot_turi">Tashkilot turi</string>
    <string name="korxona_yoki_tashkilot_nomi">Korxona yoki tashkilot nomi</string>
    <string name="tashkilotning_rasmiy_nomi">Tashkilotning rasmiy nomi</string>
    <string name="direktori_f_i_o">Direktori(F.I.O)</string>
    <string name="telefon_raqami">Telefon raqami</string>
    <string name="qo_shimcha_telefon_raqami">Qo\'shimcha telefon raqami</string>
    <string name="email">Email</string>
    <string name="stir">STIR</string>
    <string name="bank_nomi">Bank nomi</string>
    <string name="mfo">MFO</string>
    <string name="hisob_raqami">Hisob raqami</string>
    <string name="davlat_shahar">Davlat shahar</string>
    <string name="yuridik_manzili">Yuridik manzili</string>
    <string name="pochta_indeksi">Pochta indeksi</string>
    <string name="profil_sahifasiga_qaytish">Profil sahifasiga qaytish</string>
    <string name="sizning_yozgan_ma_lumotlar_nmuvaffaqiyatli_jo_natildi">Sizning yozgan ma\'lumotlar\nmuvaffaqiyatli jo\'natildi</string>
    <string name="ma_lumotlarni_3_ish_kunida_ko_rib_sizga_nshartnoma_yuboramiz">Ma\'lumotlarni 3 ish kunida ko\'rib,sizga\nshartnoma yuboramiz</string>
    <string name="profil">Profil</string>
    <string name="shaxsiy">Shaxsiy</string>
    <string name="biznes">Biznes</string>
    <string name="profil_haqida">Profil haqida</string>
    <string name="foydalanuvchi_ismi">Foydalanuvchi ismi</string>
    <string name="shaxsiy_profilni_tasdiqlash">Shaxsiy profilni tasdiqlash</string>
    <string name="fio">FIO</string>
    <string name="tug_ulgan_kun">Tug\'ulgan kun</string>
    <string name="jinsi">Jinsi</string>
    <string name="passport_seriya_va_raqami">Passport seriya va raqami</string>
    <string name="jshshir">JSHSHIR</string>
    <string name="davlat">Davlat</string>
    <string name="viloyat_shahar">Viloyat(shahar)</string>
    <string name="yashash_manzil">Yashash manzil</string>
    <string name="qo_shimcha_raqam">Qo\'shimcha raqam</string>
    <string name="tasdiqlangan_mijoz">Tasdiqlangan mijoz</string>
    <string name="ismi">Ismi</string>
    <string name="familiyasi">Familiyasi</string>
    <string name="otasini_ismi">Otasini ismi</string>
    <string name="shaxsiy_ma_lumotlar">Shaxsiy ma\'lumotlar</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="bildirshnomalar">Bildirshnomalar</string>
    <string name="dastur_tili">Dastur tili</string>
    <string name="ilova_haqida">Ilova haqida</string>
    <string name="yangiliklar">Yangiliklar</string>
    <string name="shaxsiy_xabarlar">Shaxsiy xabarlar</string>
    <string name="qo_llab_quvvatlash">Qo\'llab quvvatlash</string>
    <string name="boshqalar">Boshqalar</string>
    <string name="valyuta_kursi">Valyuta kursi</string>
    <string name="mb_kursi">MB kursi</string>
    <string name="sotib_olish">Sotib olish</string>
    <string name="sotish">Sotish</string>
    <string name="xabar_yozing">Xabar yozing</string>
    <string name="explore">Explore</string>
    <string name="ilovani_ulashish">Ilovani ulashish</string>
    <string name="asosiy">Asosiy</string>
    <string name="yordam">Yordam</string>
    <string name="sizga_kimlar_bilan_sayohat_nqilish_yoqadi">Sizga kimlar bilan sayohat\nqilish yoqadi?</string>
    <string name="sizga_qanday_turdagi_nsayohatlar_yoqadi">Sizga qanday turdagi\nsayohatlar yoqadi?</string>
</resources>