<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chap_menu_profil"
        android:title="@string/profil"
        android:icon="@drawable/ic_chap_m_profil"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/chap_menu_valuta_kursi"
        android:title="@string/valyuta_kursi"
        android:icon="@drawable/ic_valyuta"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/chap_menu_kup_savol"
        android:title="@string/ko_p_beriladigan_savollar"
        android:icon="@drawable/ic_chap_m_kup_savol"
        app:showAsAction="always"/>
    <item
        android:id="@+id/chap_menu_offerta"
        android:title="@string/oferta"
        android:icon="@drawable/ic_chap_m_offerta"
        app:showAsAction="always"/>
<!--    <item-->
<!--        android:id="@+id/chap_menu_bildirishnoma"-->
<!--        android:title="Bildirishnomalar"-->
<!--        android:icon="@drawable/ic_chap_m_bildirishnoma"-->
<!--        app:showAsAction="ifRoom"/>-->
    <item
        android:id="@+id/chap_menu_sozlanma"
        android:title="@string/sozlamalar"
        android:icon="@drawable/ic_chap_m_sozlanma"
        app:showAsAction="always"/>


    <item
        android:id="@+id/chap_menu_ilova_ulashish"
        android:title="@string/ilovani_ulashish"
        android:icon="@drawable/ic_chap_m_ilovani_ulash"
        app:showAsAction="always"/>


<!--    <item-->
<!--        android:id="@+id/chap_menu_boglanish"-->
<!--        android:title="Bog'lanish"-->
<!--        app:showAsAction="always"-->

<!--        />-->

</menu>