<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chapMenu.profil.main.Profil">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/orqaga_qaytish"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:paddingVertical="14dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/kuk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil"
                android:textSize="18dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profil_haqida"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:paddingVertical="14dp"
                android:paddingEnd="20dp"
                android:visibility="visible"
                android:src="@drawable/ic_bildirishnoma_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/kuk" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:backgroundTint="#E8E8E8"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="3dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profil_shaxsiy"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/shaxsiy"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:textColor="@color/black"
                app:cornerRadius="6dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profil_biznes"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:backgroundTint="#E8E8E8"
                android:text="@string/biznes"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                android:textColor="#C0C0C0"
                app:cornerRadius="6dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/profil_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView9"
        tools:layout="@layout/fragment_avia_qidirish" />

</androidx.constraintlayout.widget.ConstraintLayout>